# py_init

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: main.py
config/: __init__.py  config.py
src/: logger.py  main.py
src/config/: .env.sample  __init__.py  config.py  settings.toml  settings.toml.sample
src/utils/: bark.py  db.py
