[tool.poetry]
name = "py_init"
version = "0.1.0"
description = "Python project initial setup"
authors = ["troublesis <bamboo5320@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "config", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "=3.9.19"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
prettier = "^0.0.7"
pre-commit = "^3.8.0"
commitizen = "^3.29.0"
loguru = "^0.7.2"
dynaconf = "^3.2.6"
pytest = "^8.3.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
